--- a/frontend/logger_config.json
+++ b/frontend/logger_config.json
@@ -15,7 +15,7 @@
     },
     "loggers": {
         "root": {
-            "level": "INFO",
+            "level": "DEBUG",
             "handlers": ["stdout"]
         }
     }
